--- a/app/styles/audio.css
+++ b/app/styles/audio.css
@@ -8,7 +8,6 @@ html {
     margin: 0;
     box-sizing: border-box;
     outline: 0;
-    font-family: "Open Sans";
     color: #888;
     font-weight: 100
 }
@@ -16,9 +15,8 @@ html {
     display: table;
     overflow: hidden;
     background: #fff;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .8);
-    margin: 100px auto;
-    width: 352px
+    margin: 0;
+    width: 100%
 }
 .jAudio:after {
     content: " ";
@@ -248,8 +246,8 @@ html {
     clear: both
 }
 .jAudio--playlist-item.active {
-    background: #f55c5c;
-    border-bottom-color: #f55c5c
+    background: #00aff3;
+    border-bottom-color: #00aff3;
 }
 .jAudio--playlist-item.active * {
     color: #fff
